--- a/Hasura Documentation/1. Introduction.md
+++ b/Hasura Documentation/1. Introduction.md
@@ -1,2 +1,9 @@
 >> Reference Link : 
 >> https://hasura.io/docs/3.0/index
+
+# Introduction
+
+Hasura DDN (Data Delivery Network) menyederhanakan Development & Operasi dari Modern Federated Data API.
+
+Dengan Tool Powerful dan Alur kerja berbasis Code (Code-Driven Workflow),
+Hasura DDN bukan sekedar improvement, tetapi merupakan Game Changer untuk cara kita Create, Run, dan Manage API.
