Update 2.1) Basics : Overview.md

--- a/Hasura Documentation/2.1) Basics : Overview.md
+++ b/Hasura Documentation/2.1) Basics : Overview.md
@@ -7,3 +7,12 @@ Hasura DDN (Data Delivery Network) menghubungkan Data Source ke Hasura Engine de
 dan menggunakn konsep "Native Data Connectors",
 yang mana arsitektur ini dikenal sebagai "Data Supergraph", yang memungkinkan 100% Code-FIrst Approach dengan Instant API Generation.
 
+
+Dengan Hasura DDN (Data Delivery Network), kita bisa dengan mudah menghubungkan dan menggabungkan Data dari semua Source (sumber), menghilangkan Data Silos.
+Kita akan mempunyai Visibilitas yang jelas terhadap Query, Kontrol Keamanan yang kuat, dan System yang tangguh & dapat dihandalkan.
+
+Nikmati Fleksibilitas untuk melakukan penskalaan sesuai kebutuhan, menyederhanakan Development Workflow dengan tools CI/CD yang canggih, dan mengoptimalkan Performance dengan Native Query, sekaligus menjaga keamanan Data dan menjaga Business Logic tetap terpusat.
+
+
+
+
