Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -4,3 +4,7 @@
 # Basics : Background
 
 ## A. Why are building Hasura DDN ?
+
+Bottleneck (hambatan) yang biasa terjadi dalam membangun next-generation application adalah ketidakmampuan untuk menyediakan akses yang aman dan efisien ke Data yang diperlukan dengan cepat.
+
+Hasura DDN (Data Delivery Network) dengan memanfaatkan "Data Supergraph Architecture" dan Development Methodology dengan cara yang meningkatkan Produktivitas Team & Developer.
