Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -5,6 +5,27 @@
 
 ## A. Why are building Hasura DDN ?
 
-Bottleneck (hambatan) yang biasa terjadi dalam membangun next-generation application adalah ketidakmampuan untuk menyediakan akses yang aman dan efisien ke Data yang diperlukan dengan cepat.
+- Bottleneck (hambatan) yang biasa terjadi dalam membangun next-generation application adalah ketidakmampuan untuk menyediakan akses yang aman dan efisien ke Data yang diperlukan dengan cepat.
 
-Hasura DDN (Data Delivery Network) dengan memanfaatkan "Data Supergraph Architecture" dan Development Methodology dengan cara yang meningkatkan Produktivitas Team & Developer.
+- Hasura DDN (Data Delivery Network) dengan memanfaatkan "Data Supergraph Architecture" dan Development Methodology dengan cara yang meningkatkan Produktivitas Team & Developer.
+
+- Dalam percakapan dengan Developer yang berfokus pada pembangunan API & Microservices,
+kami telah mengidentifikasi Key Challenges (tantangan utama), yaitu :
+
+(1) Slow Product Development and time-to-market Cycles
+(Pengembangan Product & siklus waktu ke pasar yang lambat )
+
+(2) Difficult Data Source Federation & API Composition
+(Federasi Data Source & API Composition yang sulit)
+
+(3) Runaway Microservice Sprawl
+(Penyebaran Microservice yang tak terkendali)
+
+(4) Unstructured Governance with Difficult Collaboration
+(Tata Kelola yang tidak terstruktur dengan Kolaborasi yang sulit)
+
+(5) Complex and Untrustworthy Security
+(Keamanan yang Kompleks dan tidak dapat dipercaya)
+
+(6) Compromised Performance and Difficult Scalability
+(Performa yang terganggu dan Skalabilitas yang sulit)
