Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -29,3 +29,13 @@ kami telah mengidentifikasi Key Challenges (tantangan utama), yaitu :
 
 (6) Compromised Performance and Difficult Scalability
 (Performa yang terganggu dan Skalabilitas yang sulit)
+
+(7) Opaque Query Observability
+(Pengamatan Query yang tidak jelas)
+
+(8) Multiple "API Consumers" with Different Requirements
+("API Consumer" yang banyak, tetapi dengan Requirement berbeda)
+
+
+- Hasura DDN (Data Delivery Network) di-desain untuk mengatasi tantangan ini,
+menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Architect secara global
