Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -39,3 +39,8 @@ kami telah mengidentifikasi Key Challenges (tantangan utama), yaitu :
 
 - Hasura DDN (Data Delivery Network) di-desain untuk mengatasi tantangan ini,
 menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Architect secara global
+
+
+## 1. For API Authors 
+## (Hasura DDN dibuat untuk "API Authors")
+
