Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -41,6 +41,7 @@ kami telah mengidentifikasi Key Challenges (tantangan utama), yaitu :
 menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Architect secara global
 
 
-## 1. For API Authors 
+## 1. For API Authors :
+##  Why are building Hasura DDN : For API Author
 ## (Hasura DDN dibuat untuk "API Authors")
 
