Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -45,3 +45,24 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 ##  Why are building Hasura DDN : For API Author
 ## (Hasura DDN dibuat untuk "API Authors")
 
+
+- Developers yang terlibat dalam Pembuatan API, menghargai :
+
+#### (1) Feature-Rich Domain Modelling : Easily Model Complex Data Domains with Flexibility
+(Domain Modelling yang kaya fitur : Mudah memodelkan Domain Data yang kompleks dengan Fleksibilitas)
+
+#### (2) Composability Across Diverse Data Domains : Seamlessly integrate various Data Sources
+(Kemampuan menyusun antar berbagai Data Domain : Integrasikan berbagai Data Source dengan lancar)
+
+(Composability = kemampuan menyusun komponen)
+
+#### (3) Easy-to-understand Permissioning and Security : Implement Fine-Grained Access Control and Security Policies
+(Perizinan & Keamanan yang mudah dimengerti : menerapkan "Access Control" & "Kebijakan Keamanan" yang terperinci)
+
+(Fine-Grained = terperinci)
+
+#### (4) Developer Experience (DX) : Access Tools that Accelerate building and iterating Process
+(Pengalaman Developer : Akses alat yang mempercepat Proses Pembuatan & Proses Iterasi )
+
+#### (5) Programming Language Flexibility : Choose The Programming Language that best fits your project needs
+(Fleksibilitas Bahasa Pemrograman : Pilih bahasa pemrograman yang paling sesuai dengan kebutuhan Project anda)
