Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -66,3 +66,9 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 
 #### (5) Programming Language Flexibility : Choose The Programming Language that best fits your project needs
 (Fleksibilitas Bahasa Pemrograman : Pilih bahasa pemrograman yang paling sesuai dengan kebutuhan Project anda)
+
+
+## 2. For API Maintainers
+## Why are building Hasura DDN : For API Maintainers
+## (Hasura DDN dibuat untuk "API Maintainers")
+
