Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -72,3 +72,16 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 ## Why are building Hasura DDN : For API Maintainers
 ## (Hasura DDN dibuat untuk "API Maintainers")
 
+- Team yang mengelola "API Maintenance" (Pemeliharaan API), berfokus pada : 
+
+#### (1) Performance & Operational Efficiency : Scale and Optimize Performance with Minimal Operational Overhead
+
+(Kinerja & Operational yang Efisien : Scale & Optimalkan Kinerja dengan Biaya Operasional Minimal)
+
+#### (2) Seamless Rollouts and Stability : Implement Changes and Updates Confidently, ensuring no downtime and avoiding breaking changes
+
+(Peluncuran dan Stabilitas yang lancar : Terapkan perubahan & update dengan yakin, pastikan tidak ada Downtime dan perubahan yang merusak)
+
+(Rollout = Process of Deploying a new Software)
+
+(Downtime = waktu saat Software unavailable atau tidak dapat beroperasi sebagaimana mestinya)
