Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -85,3 +85,17 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 (Rollout = Process of Deploying a new Software)
 
 (Downtime = waktu saat Software unavailable atau tidak dapat beroperasi sebagaimana mestinya)
+
+
+#### (3) Federated CI/CD for Team Independence: Facilitate independent functioning of teams with a robust CI/CD pipeline.
+
+(CI/CD Terfederasi untuk Kemandirian Tim: Memfasilitasi fungsi tim yang independen dengan alur kerja CI/CD yang tangguh)
+
+#### (4) Edge and Distributed Topology: Deploy APIs efficiently, enhancing global scalability and user proximity
+
+(Edge dan Topologi Terdistribusi : Terapkan API secara efisien, tingkatkan skalabilitas global dan kedekatan pengguna.)
+
+
+#### (5) Rapid Onboarding and Data Domain Discovery: Enable quick onboarding for developers and easy discovery of data domains and their possible interrelations
+
+(Onboarding Cepat dan Data Domain Discovery: Aktifkan onboarding cepat untuk Developer dan Discovery of Data Domain dengan mudah serta kemungkinan inter-relasi nya)
