Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -99,3 +99,8 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 #### (5) Rapid Onboarding and Data Domain Discovery: Enable quick onboarding for developers and easy discovery of data domains and their possible interrelations
 
 (Onboarding Cepat dan Data Domain Discovery: Aktifkan onboarding cepat untuk Developer dan Discovery of Data Domain dengan mudah serta kemungkinan inter-relasi nya)
+
+## 2.  For API Consumers
+## Why are building Hasura DDN : For API Consumers
+## (Hasura DDN dibuat untuk "API Consumers")
+
