Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -104,3 +104,6 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 ## Why are building Hasura DDN : For API Consumers
 ## (Hasura DDN dibuat untuk "API Consumers")
 
+- "API Consumer" merupakan Aplikasi atau Service yang menggunakan API untuk mengambil informasi atau untuk melakukan tindakan dari aplikasi lain.
+- 
+
