Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -105,5 +105,20 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 ## (Hasura DDN dibuat untuk "API Consumers")
 
 - "API Consumer" merupakan Aplikasi atau Service yang menggunakan API untuk mengambil informasi atau untuk melakukan tindakan dari aplikasi lain.
-- 
+- "API Consumer" memprioritaskan :
+
+#### (1) Reliability : To have a reliable API that is documented and typed
+
+(Dapat Diandalkan : memiliki API handal yang terdokumentasi & terketik)
+
+#### (2) Consistency: To have a consistent API to fetch data from, irrespective of the data source
+
+(Konsistensi : Memiliki API yang konsisten untuk mengambil data, apapun Sumber Datanya)
+
+#### (3) Discoverability: To discover what data is available to them via their API and to try out that API with ease.
+
+(Kemudahan untuk menemukan : Menemukkan data apa yang tersedia melalui API dan dapat mencoba API tersebut dengan mudah)
+
+(Discoverability merupakan kemudahan dalam menemukan data, informasi, dan sebagainya)
+
 
