Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -116,6 +116,12 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 
 (Konsistensi : Memiliki API yang konsisten untuk mengambil data, apapun Sumber Datanya)
 
+
+>>
+>>
+## B. What is the Hasura Data Delivery Network (DDN) ? 
+
+
 #### (3) Discoverability: To discover what data is available to them via their API and to try out that API with ease.
 
 (Kemudahan untuk menemukan : Menemukkan data apa yang tersedia melalui API dan dapat mencoba API tersebut dengan mudah)
