Update 2.2) Basics : Background.md

--- a/Hasura Documentation/2.2) Basics : Background.md
+++ b/Hasura Documentation/2.2) Basics : Background.md
@@ -127,6 +127,8 @@ menyederhanakan Alur Kerja (Workflow) untuk Software Developer dan Software Arch
 >>
 ## B. What is the Hasura Data Delivery Network (DDN) ? 
 
+- Hasura DDN (Data Delivery Network) memfasilitasi Rapid Declarative Scaffolding & Deployment dari API Layer yang bisa dikonfigurasi untuk menghubungkan secara Virtual ke semua Sumber Data.
 
+- Dengan Hasura DDN, kami memperkenalkan pendekatan baru untuk Microservice Development yang dirancang untuk Provide (baik dalam Developer Workflow, maupun Final Product), Solusi yang lebih Faster (cepat), Powerful (kuat/tangguh), Agile (tangkas), dan Scalable (dapat diskalakan) untuk membangun Modern Applications.
 
 
