Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -2,3 +2,9 @@
 >> https://hasura.io/docs/3.0/basics/core-concepts
 
 # Core Concepts
+
+- Meluasnya Microservices & API yang harus dihubungkan ke setiap Produk agar dapat berfungsi, telah menimbulkan serangkaian tantangan baru bagi Developer & Architect.
+
+- Di era modern dalam membangun aplikasi, Data Layer menjadi semakin kompleks; Data Layer tidak lagi sekadar Database, tetapi Collection of Database (Kumpulan Database), Services, dan API.
+
+- Hasura DDN memperkenalkan konsep Data Supergraph untuk membantu Anda mengelola kompleksitas ini.
