Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -8,3 +8,6 @@
 - Di era modern dalam membangun aplikasi, Data Layer menjadi semakin kompleks; Data Layer tidak lagi sekadar Database, tetapi Collection of Database (Kumpulan Database), Services, dan API.
 
 - Hasura DDN memperkenalkan konsep Data Supergraph untuk membantu Anda mengelola kompleksitas ini.
+
+  ## A. The State of The Data Layer
+  
