Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -11,3 +11,8 @@
 
   ## A. The State of The Data Layer
   
+- Bayangkan beberapa Team berikut dalam sebuah Hypothtical Company :
+
+>> "Hypothetical" merupakan kondisi berdasarkan teori atau asumsi dan bukan berdasarkan keadaan sebenarnya (actual events). Seringkali digunakan untuk meng-eksplorasi kemungkinan yang terjadi pada situasi tertentu, yang mana pertanyaan tersebut seperti "apa yang anda lakukan jika memenangkan Lotere ?"
+
+>> "Hypothetical Company" merupakan kondisi perumpamaan bisnis yang digunakan sebagai contoh untuk diskusi, analisis, dan sebagainya
