Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -16,3 +16,22 @@
 >> "Hypothetical" merupakan kondisi berdasarkan teori atau asumsi dan bukan berdasarkan keadaan sebenarnya (actual events). Seringkali digunakan untuk meng-eksplorasi kemungkinan yang terjadi pada situasi tertentu, yang mana pertanyaan tersebut seperti "apa yang anda lakukan jika memenangkan Lotere ?"
 
 >> "Hypothetical Company" merupakan kondisi perumpamaan bisnis yang digunakan sebagai contoh untuk diskusi, analisis, dan sebagainya
+
+(1) Product Management Team :
+
+-> bertanggung jawab atas 'Relational Database' yang menyimpan informasi Produk.
+yang mana Team ini fokus pada Cataloging Products (Pengkatalogan Produk), Managing Inventory, dan memastikkan Detail Produk dalam keadaan Akurat & up-to-date dengan menggunakan Relational Database PostgreSQL.
+
+(2) User Experience Team : 
+
+-> Mengelola Dokumen Database MongoDB dan API terkait untuk menyimpan User Information.
+Fokusnya mereka adalah Maintaining User Profile, Preferences, dan memastikkan privasi dan Security dari data pengguna.
+
+(3) Search Optimization Team : 
+
+-> Menangani integrasi Algolia Search Services untuk Product dan Partner Store. Mereka bekerja untuk mengoptimalkan algoritme pencarian, memastikan hasil pencarian yang relevan, dan meningkatkan pengalaman pencarian secara keseluruhan bagi User.
+
+(4) Finance & Transactions Team : 
+
+-> Mengawasi Stripe Payment Service (layanan pembayaran Stripe) dan Relational Database yang mendasarinya untuk memproses pembayaran,
+yang mana hal ini termasuk mengelola keamanan transaksi (Managing Transaction Security) , integrasi Payment Gateway, dan memastikan Transaksi Keuangan yang lancar.
