Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -35,3 +35,9 @@ Fokusnya mereka adalah Maintaining User Profile, Preferences, dan memastikkan pr
 
 -> Mengawasi Stripe Payment Service (layanan pembayaran Stripe) dan Relational Database yang mendasarinya untuk memproses pembayaran,
 yang mana hal ini termasuk mengelola keamanan transaksi (Managing Transaction Security) , integrasi Payment Gateway, dan memastikan Transaksi Keuangan yang lancar.
+
+-> Payment Gateway itu seperti "Online Bridge" (jembatan Online) yang membantu kita melakukan pembelian di internet.
+
+-> Payment Gateway merupakan Technology yang memfasilitasi Online Transactions dengan mengirim informasi pembayaran secara aman antara Customer, Merchant (Pedagang), dan Bank.
+Payment Gateway memastikkan bahwa Data Sensitif dilakukan enkripsi, dan diproses dengan aman.
+(Data Sensitif tersebut seperti Credit Card Numbers, Credit Card Details)
