Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -41,3 +41,16 @@ yang mana hal ini termasuk mengelola keamanan transaksi (Managing Transaction Se
 -> Payment Gateway merupakan Technology yang memfasilitasi Online Transactions dengan mengirim informasi pembayaran secara aman antara Customer, Merchant (Pedagang), dan Bank.
 Payment Gateway memastikkan bahwa Data Sensitif dilakukan enkripsi, dan diproses dengan aman.
 (Data Sensitif tersebut seperti Credit Card Numbers, Credit Card Details)
+
+
+(5) Logistics and Shipping Team : 
+
+Bertanggung jawab atas layanan pengiriman ShipStation, pemenuhan pesanan (Fulfilling Orders), dan Relational Database yang mendukung proses ini. Fokus utama mereka adalah logistik, pelacakan pesanan (Order Tracking) , dan memastikan pengiriman produk tepat waktu.
+
+
+(6) Data Science and Recommendations Team :
+
+Mengelola Weaviate Vector Database untuk menyimpan User Recommendation. 
+Mereka mengerjakan Personalization Algorithms, analisis User Behavior, dan memberikan Product Recommendations untuk meningkatkan User Experience.
+
+
