Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -54,3 +54,11 @@ Mengelola Weaviate Vector Database untuk menyimpan User Recommendation.
 Mereka mengerjakan Personalization Algorithms, analisis User Behavior, dan memberikan Product Recommendations untuk meningkatkan User Experience.
 
 
+
+
+- Keragaman Team dalam perusahaan ini, masing-masing dengan fokus unik dan Data Service yang terspesialisasi, melambangkan Challenge yang terjadi dalam Pengelolaan Data secara modern dan Pengembangan API
+
+- Semua Team ini beroperasi dengan API, Schemas, dan Metodologi yang berbeda,
+yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengembangan Aplikasi, tetapi juga memerlukan keterlibatan Data Architect & Data Engineer untuk mengintegrasikan dan memelihara berbagai sumber data secara efisien.
+
+(Fragmentasi merupakan Perbedaan pada Aplikasi atau Software)
