Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -11,7 +11,7 @@
 
   ## A. The State of The Data Layer
   
-- Bayangkan beberapa Team berikut dalam sebuah Hypothtical Company :
+Bayangkan beberapa Team berikut dalam sebuah Hypothtical Company :
 
 >> "Hypothetical" merupakan kondisi berdasarkan teori atau asumsi dan bukan berdasarkan keadaan sebenarnya (actual events). Seringkali digunakan untuk meng-eksplorasi kemungkinan yang terjadi pada situasi tertentu, yang mana pertanyaan tersebut seperti "apa yang anda lakukan jika memenangkan Lotere ?"
 
@@ -19,46 +19,46 @@
 
 (1) Product Management Team :
 
--> bertanggung jawab atas 'Relational Database' yang menyimpan informasi Produk.
+- bertanggung jawab atas 'Relational Database' yang menyimpan informasi Produk.
 yang mana Team ini fokus pada Cataloging Products (Pengkatalogan Produk), Managing Inventory, dan memastikkan Detail Produk dalam keadaan Akurat & up-to-date dengan menggunakan Relational Database PostgreSQL.
 
 (2) User Experience Team : 
 
--> Mengelola Dokumen Database MongoDB dan API terkait untuk menyimpan User Information.
+- Mengelola Dokumen Database MongoDB dan API terkait untuk menyimpan User Information.
 Fokusnya mereka adalah Maintaining User Profile, Preferences, dan memastikkan privasi dan Security dari data pengguna.
 
 (3) Search Optimization Team : 
 
--> Menangani integrasi Algolia Search Services untuk Product dan Partner Store. Mereka bekerja untuk mengoptimalkan algoritme pencarian, memastikan hasil pencarian yang relevan, dan meningkatkan pengalaman pencarian secara keseluruhan bagi User.
+- Menangani integrasi Algolia Search Services untuk Product dan Partner Store. Mereka bekerja untuk mengoptimalkan algoritme pencarian, memastikan hasil pencarian yang relevan, dan meningkatkan pengalaman pencarian secara keseluruhan bagi User.
 
 (4) Finance & Transactions Team : 
 
--> Mengawasi Stripe Payment Service (layanan pembayaran Stripe) dan Relational Database yang mendasarinya untuk memproses pembayaran,
+- Mengawasi Stripe Payment Service (layanan pembayaran Stripe) dan Relational Database yang mendasarinya untuk memproses pembayaran,
 yang mana hal ini termasuk mengelola keamanan transaksi (Managing Transaction Security) , integrasi Payment Gateway, dan memastikan Transaksi Keuangan yang lancar.
 
--> Payment Gateway itu seperti "Online Bridge" (jembatan Online) yang membantu kita melakukan pembelian di internet.
+- Payment Gateway itu seperti "Online Bridge" (jembatan Online) yang membantu kita melakukan pembelian di internet.
 
--> Payment Gateway merupakan Technology yang memfasilitasi Online Transactions dengan mengirim informasi pembayaran secara aman antara Customer, Merchant (Pedagang), dan Bank.
+- Payment Gateway merupakan Technology yang memfasilitasi Online Transactions dengan mengirim informasi pembayaran secara aman antara Customer, Merchant (Pedagang), dan Bank.
 Payment Gateway memastikkan bahwa Data Sensitif dilakukan enkripsi, dan diproses dengan aman.
 (Data Sensitif tersebut seperti Credit Card Numbers, Credit Card Details)
 
 
 (5) Logistics and Shipping Team : 
 
-Bertanggung jawab atas layanan pengiriman ShipStation, pemenuhan pesanan (Fulfilling Orders), dan Relational Database yang mendukung proses ini. Fokus utama mereka adalah logistik, pelacakan pesanan (Order Tracking) , dan memastikan pengiriman produk tepat waktu.
+- Bertanggung jawab atas layanan pengiriman ShipStation, pemenuhan pesanan (Fulfilling Orders), dan Relational Database yang mendukung proses ini. Fokus utama mereka adalah logistik, pelacakan pesanan (Order Tracking) , dan memastikan pengiriman produk tepat waktu.
 
 
 (6) Data Science and Recommendations Team :
 
-Mengelola Weaviate Vector Database untuk menyimpan User Recommendation. 
+- Mengelola Weaviate Vector Database untuk menyimpan User Recommendation. 
 Mereka mengerjakan Personalization Algorithms, analisis User Behavior, dan memberikan Product Recommendations untuk meningkatkan User Experience.
 
 
 
 
-- Keragaman Team dalam perusahaan ini, masing-masing dengan fokus unik dan Data Service yang terspesialisasi, melambangkan Challenge yang terjadi dalam Pengelolaan Data secara modern dan Pengembangan API
+Keragaman Team dalam perusahaan ini, masing-masing dengan fokus unik dan Data Service yang terspesialisasi, melambangkan Challenge yang terjadi dalam Pengelolaan Data secara modern dan Pengembangan API
 
-- Semua Team ini beroperasi dengan API, Schemas, dan Metodologi yang berbeda,
+Semua Team ini beroperasi dengan API, Schemas, dan Metodologi yang berbeda,
 yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengembangan Aplikasi, tetapi juga memerlukan keterlibatan Data Architect & Data Engineer untuk mengintegrasikan dan memelihara berbagai sumber data secara efisien.
 
 (Fragmentasi merupakan Perbedaan pada Aplikasi atau Software)
