Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -63,3 +63,7 @@ Semua Team ini beroperasi dengan API, Schemas, dan Metodologi yang berbeda,
 yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengembangan Aplikasi, tetapi juga memerlukan keterlibatan Data Architect & Data Engineer untuk mengintegrasikan dan memelihara berbagai sumber data secara efisien.
 
 (Fragmentasi merupakan Perbedaan pada Aplikasi atau Software)
+
+
+### 1. What is "The Data Layer" ?
+>> Penjelasan tambahan di luar Dokumentasi Hasura
