Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -67,3 +67,17 @@ yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengemban
 
 ### 1. What is "The Data Layer" ?
 >> Penjelasan tambahan di luar Dokumentasi Hasura
+
+- Pada aplikasi apapun, "Data Layer" merupakan tempat aplikasi berinteraksi dengan Database.
+
+- "Data Layer" menangani "Storage" (Penyimpanan), Retrieval (Pengambilan), and "Manipulation" (manipulasi) of Data
+
+(Data Layer menangani Penyimpanan, Pengambilan, dan Manipulasi Data)
+
+- "Data Layer" sangat penting, karena :
+	(1) memastikkan  Aplikasi dapat memperoleh Data
+		(Data Layer makes sure "App can get Data")
+	
+	(2) memastikkan Aplikasi dapat mengirim Data baru ke Database
+		(Data Layer makes sure "App can send new Data to the Database")
+
