Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -75,8 +75,8 @@ yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengemban
 (Data Layer menangani Penyimpanan, Pengambilan, dan Manipulasi Data)
 
 - "Data Layer" sangat penting, karena :
-- 
-	(1) memastikkan  Aplikasi dapat memperoleh Data
+
+	(1) memastikkan  Aplikasi dapat memperoleh Data.
 
 	(Data Layer makes sure "App can get Data")
 	
