Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -84,3 +84,7 @@ yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengemban
 
 	(Data Layer makes sure "App can send new Data to the Database")
 
+
+### 2. How Does Hasura Manage "The Data Layer" ?
+### (Bagaimana Hasura mengelola "Data Layer" ? )
+>> Penjelasan tambahan di luar Dokumentasi Hasura
