Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -88,3 +88,10 @@ yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengemban
 ### 2. How Does Hasura Manage "The Data Layer" ?
 ### (Bagaimana Hasura mengelola "Data Layer" ? )
 >> Penjelasan tambahan di luar Dokumentasi Hasura
+
+- Hasura mengelola "Data Layer" dengan secara otomatis membuat "GraphQL API" untuk Database anda.
+yang mana, ini berarti, pada saat kita membuat Database ke Hasura, 
+Hasura membuat serangkaian alat yang memungkinkan anda membuat Query & memodifikasi Data tanpa perlu membuat API secara manual.
+
+
+
