Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -93,5 +93,20 @@ yang mana Fragmentasi atau Perbedaan ini tidak hanya memperumit Proses Pengemban
 yang mana, ini berarti, pada saat kita membuat Database ke Hasura, 
 Hasura membuat serangkaian alat yang memungkinkan anda membuat Query & memodifikasi Data tanpa perlu membuat API secara manual.
 
+#### 2.1) Berikut ini yang dilakukan Hasura pada "Data Layer" :
+
+##### [1] Instant API Generation : 
+
+-> Begitu kita connect ke Database, Hasura secara otomatis membuat "GraphQL API".
+yang mana kita bisa langsung membuat "Query" (asking for Data) dan Mutation (changing data) menggunakan API ini.
+
+-> API (Application Programming Interface) merupakan cara berbagai Software yang berbeda untuk berkomunikasi dengan satu sama lain.
+
+Pada konteks Hasura, API memungkinkan aplikasi kita (seperti Web atau Mobile App) untuk berkomunikasi dengan Database atau untuk mendapatkan Data atau Memperbarui Data.
+
+-> Biasanya (pada case bukan Hasura), Developer perlu membuat API secara manual agar aplikasi bisa berinteraksi dengan Database.
+yang mana hal ini melibatkan penulisan Backend Code, Setting Up Route (Pengatura Rute), dan memastikkan Keamanan, yang mana tugas-tugas tersebut dapat menyita banyak waktu dan tenaga.
+
+-> Pada Hasura, "Instant API Generation" secara otomatis membuat API, segera setelah kita menghubungkan ke Database, tanpa kita perlu menulis Backend Code
 
 
