Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -110,3 +110,7 @@ yang mana hal ini melibatkan penulisan Backend Code, Setting Up Route (Pengatura
 -> Pada Hasura, "Instant API Generation" secara otomatis membuat API, segera setelah kita menghubungkan ke Database, tanpa kita perlu menulis Backend Code
 
 
+##### [2] Permissions : 
+
+-> Hasura memungkinkan kita untuk menetapkan "Fine-Grained" Access Control Rules (aturan kontrol Akses yang terperinci), sehingga User atau Role yang berbeda dapat memiliki tingkat akses yang berbeda ke Data kita.
+yang mana, hal ini memastikkan Keamanan dengan hanya mengizinkan orang yang berwenang untuk melihat atau mengubah tertentu.
