Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -117,4 +117,39 @@ yang mana, hal ini memastikkan Keamanan dengan hanya mengizinkan orang yang berw
 
 >> ^For your Information^ 
 >>
->> [1] **Fine-Grained Access Control**
+>> {1} **Fine-Grained Access Control** :
+>> -> "Fine-Grained Aceess Control" (FGAC) merupakan Security approach yang memungkinkan kita untuk menetapkan aturan yang "Sangat Spesifik" tentang siapa yang dapat mengakses Data atau Fitur dalam suatu System.
+
+>> -> Keyword :
+>> "Fine-Grained Aceess Control" (FGAC) = aturan Access Control yang sangat spesifik
+ 
+>> -> berbeda dengan "Coarse-Grained Access Control" yang menyediakan izin yang luas tanpa aturan yang spesifik.
+>> Seperti "Everyone can accesss the Data", "All Students can Access the book"
+
+>> -> Contoh : School Library
+
+>> (1) Coarse-Grained Access :
+>> All Students dapat meminjam buku
+
+>> (2) Fine-Grained Access Control : 
+
+>> Elementary School Students (Siswa SD) hanya bisa meminjam buku dari Kid's Section.
+
+>> Middle School Students (Siswa SMP) dapat meminjam buku dari Kid's Section & Young Adult Section.
+
+>> Teachers (Guru) dapat mengakses semua Book Section.
+
+
+>> -> Use Case (Kasus Penggunaan) :
+
+>> (1) Database Security :
+>> Membatasi akses pengguna ke Row (baris) atau Kolom yang spesifik pada Database Table.
+>> seperti, ada Baris tertentu pada Database Table yang hanya boleh diakses oleh Admin.
+
+>> (2) Application Security :
+>> Mengontrol Akses berdasarkan User Roles.
+>> yakni setiap Roles mempunyai izin yang berbeda untuk mengakses Fitur atau Data tertentu.
+
+>> (3) Resource Management :
+>> Mengelola akses ke File, Folder, atau Services berdasarkan User Roles, Location, atau Faktor lainnnya
+
