Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -154,3 +154,16 @@ yang mana, hal ini memastikkan Keamanan dengan hanya mengizinkan orang yang berw
 >> (3) Resource Management :
 >> Mengelola akses ke File, Folder, atau Services berdasarkan User Roles, Location, atau Faktor lainnnya
 
+
+##### [3] Real Time Data :
+
+-> Hasura menawarkan "Subscription" di GraphQL yang menyediakan Real-Time Update.
+
+Jika ada yang berubah pada Database, aplikasi yang terhubung ke Hasura dapat secara otomatis diperbarui dengan Data baru tanpa perlu melakukan Refresh secara manual.
+
+>> ^For your Information^
+>> 
+>> {1} Subcription :
+>> 
+>> ->
+>>
