Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -163,7 +163,7 @@ Jika ada yang berubah pada Database, aplikasi yang terhubung ke Hasura dapat sec
 
 >> ^For your Information^
 >> 
->> {1} Subcription :
+>> {1} **Subscription** :
 >> 
 >> ->
 >>
