--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -167,4 +167,13 @@ Jika ada yang berubah pada Database, aplikasi yang terhubung ke Hasura dapat sec
 >> 
 >> -> Subscription adalah fitur canggih yang memungkinkan kita mendapatkan "Real-Time Updates" dari Database.
 artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomatis menerima Update tanpda perlu melakukan Refresh atau Request tambahan lainnya.
->>
+>> ```graphql
+subscription {
+  posts {
+    id
+    title
+    content
+    created_at
+  }
+}
+```
