Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -169,13 +169,13 @@ Jika ada yang berubah pada Database, aplikasi yang terhubung ke Hasura dapat sec
 artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomatis menerima Update tanpda perlu melakukan Refresh atau Request tambahan lainnya.
 >>
 >> -> Contoh Query Subscription pada Hasura : 
-```graphql
-subscription {
-  posts {
-    id
-    title
-    content
-    created_at
-  }
-}
-```
+>>```graphql
+>>subscription {
+>>  posts {
+>>    id
+>>    title
+>>    content
+>>    created_at
+>>  }
+>>}
+>>```
