--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -179,3 +179,13 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  }
 >>}
 >>```
+>>
+>>  -> Cara Kerja "Subscription" di Hasura :
+
+>> (1) Client Subscribes :
+
+>> Client yang berupa Front-end Application pada Hasura, mengirim "Query GraphQL Subscription".
+>> Query tersebut dibutuhkan untuk track changes (melacak perubahan).
+>>
+>>Misalnya jika kita ingin mendapatkan Real-Time Update mengenai Tabel "Message",
+>>maka kita akan Subscribe ke Tabel "Message" tersebut. 
