Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -168,7 +168,13 @@ Jika ada yang berubah pada Database, aplikasi yang terhubung ke Hasura dapat sec
 >> -> Subscription adalah fitur canggih yang memungkinkan kita mendapatkan "Real-Time Updates" dari Database.
 artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomatis menerima Update tanpda perlu melakukan Refresh atau Request tambahan lainnya.
 >>
->> -> Contoh Query Subscription pada Hasura : 
+>> -> Contoh Query Subscription pada Hasura :
+>>
+>> misalnya kita mempunyai Table di Database yang bernama "Posts",
+>> dan kita ingin menampilkan Real-Time Updates saat terdapat perubahan pada Tabel "Posts".
+>>
+>>Berikut ini adalah contoh Query untuk GraphQL Subscription ke Tabel Posts : 
+>>
 >>```graphql
 >>subscription {
 >>  posts {
