Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -194,4 +194,9 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Query tersebut dibutuhkan untuk track changes (melacak perubahan).
 >>
 >>Misalnya jika kita ingin mendapatkan Real-Time Update mengenai Tabel "Message",
->>maka kita akan Subscribe ke Tabel "Message" tersebut. 
+>>maka kita akan Subscribe ke Tabel "Message" tersebut.
+>>
+>>  (2) Hasura Listens For Change :
+>>
+>> Setelah Subscription aktif,
+>> kemudian Hasura memantau Database untuk setiap perubahan (seperti New Messages, Updated Records, atau Deleted Data).
