Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -200,3 +200,9 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>
 >> Setelah Subscription aktif,
 >> kemudian Hasura memantau Database untuk setiap perubahan (seperti New Messages, Updated Records, atau Deleted Data).
+>>
+>> (3) Real-Time Updates :
+>>
+>> Saat terdapat perubahan pada Database,
+>> Hasura secara otomatis "Push the updated Data" (Push data yang di-update) ke Aplikasi secara Real-Time.
+>> yang mana dengan hal ini, Aplikasi tidak perlu mengirim Request baru atau melakukan Refresh Page untuk mendapatkan Data yang baru.
