--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -206,3 +206,11 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Saat terdapat perubahan pada Database,
 >> Hasura secara otomatis "Push the updated Data" (Push data yang di-update) ke Aplikasi secara Real-Time.
 >> yang mana dengan hal ini, Aplikasi tidak perlu mengirim Request baru atau melakukan Refresh Page untuk mendapatkan Data yang baru.
+>>
+>> -> Contoh Penggunaan Subscription :
+>>
+>> Jika kita membangun Chat App (Aplikasi Chat),
+>> kita bisa melakukan "Subscribe" ke Tabel "Messages",
+>> sehingga kapanpun ada Pesan baru, maka Pesan tersebut akan langsung muncul ke Aplikasi tanpa harus Reload Page (memuat ulang halaman).
+>> 
+>> (Tabel "Messages" berisi data mengenai Pesan Chat, sehingga saat ada Pesan baru masuk, maka data pada Tabel "Messages" mengalami perubahan).
